[WIP] Resolve whitespaces on chrome mobile

--- a/RemoteExaminationFrontEnd/src/app/app.component.scss
+++ b/RemoteExaminationFrontEnd/src/app/app.component.scss
@@ -80,7 +80,3 @@ nb-toggle {
     margin-right: 2%;
   }
 }
-
-.resolve-whitespaces {
-  overscroll-behavior: contain;
-}
