--- a/RemoteExaminationFrontEnd/src/styles.scss
+++ b/RemoteExaminationFrontEnd/src/styles.scss
@@ -11,6 +11,9 @@
   background: transparent; /* Optional: just make scrollbar invisible */
 }
 
+nb-layout-column.remove-whitespaces {
+  background-attachment: initial;
+}
 
 .fa-icon-color-success {
   color: #00d68f;
